# id3tools

./: .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  RENAME.md  SECURITY.md  clap.txt  cliff.toml  debug.txt  debug.yaml  details.csv  id3config.toml  id3tag-config.toml  id3tag.js  justfile  logs.yaml  sgconfig.yml  summary.csv  test.txt  treefmt.toml
.chglog/: config.yml
.claude/: settings.json  settings.local.json
.crumbs/: add-ability-to-capitalize-fields-artist-album-artist-album-t.md  add-automatic-track-numbering.md  add-basic-metadata-manipulation-for-various-formats.md  add-counter-to-tracks-eg-track-n.md  add-dsf-tag-editing-when-the-dsf-crate-supports-it.md  add-images-to-ape-files.md  add-in-application-globbing-instead-of-relying-on-the-os.md  add-ogg-vorbis-support.md  add-strings-to-front-and-back-enum-for-filenames.md  add-support-for-image-formats-in-counting.md  add-support-for-webp-image-import.md  add-the-ability-to-add-images-based-on-folder-name.md  add-the-ability-to-organize-files-based-on-tags.md  add-the-ability-to-read-a-id3tag-toml-in-a-directory.md  add-the-ability-to-read-flags-from-env-vars.md  add-the-ability-to-read-values-from-a-csv.md  align-variable-names-across-format-crate-handlers.md  all-crates-add-forbid-unsafe-code-to-all-crate-roots.md  allow-import-of-tags-based-on-file-names.md  check-if-there-is-only-one-music-file-and-one-or-more-cue-or.md  common-filetypes-from-filename-swallows-i-o-errors.md  common-genre-from-str-silently-accepts-typos-as-other.md  common-hardcoded-fallback-log-file-path.md  common-panicking-unwrap-in-count-files-iterator.md  common-split-val-silently-defaults-on-parse-failures.md  common-tests-fail-due-to-missing-sample-audio-files-in-testd.md  config.toml  create-a-utility-that-removes-the-flac-file-if-a-cue-file-ex.md  create-export-images-e-flag-to-export-images-to-filename-xxx.md  create-tests.md  dep-adler-crate-unmaintained-rustsec-2025-0056.md  dep-mp3-metadata-is-unsound-rustsec-2025-0027.md  dep-paste-crate-unmaintained-rustsec-2024-0436.md  dep-tokio-unsound-broadcast-channel-rustsec-2025-0023.md  dont-rename-files-if-one-or-more-tags-used-is-blank.md  enable-search-and-replace-in-certain-tags.md  export-duration-in-mm-ss-in-addition-to-the-current-msec.md  gather-files-after-renaming-i-e-move-out-of-their-individual.md  get-album-title-from-folder.md  handle-disc-numbering-using-letters-instead-of-numbers.md  (+53 more)
.github/: dependabot.yml  mergify.yml
.github/workflows/: check-markdown-links.yml  ci.yml  release.yml
.trunk/: actions  logs  notifications  out  trunk.yaml
Daily/: 2022-03-03.md
common/: Cargo.toml  README.md
common/src/: file_types.rs  genres.rs  lib.rs  log.rs  main_cli.rs  shared.rs
docs/: _Frontmatter.md
docs/plans/: 2026-06-07-anyhow-error-handling.md  2026-06-30-audio-info-block-for-flac.md
docs/plans/completed/: 2026-06-30-audio-info-block-for-flac.md
id3cli-gen/: Cargo.toml
id3cli-gen/src/: main.rs
id3export/: CHANGELOG.md  Cargo.toml  README.md
id3export/src/: CHANGELOG.md  build_cli.rs  main.rs  stats.rs  tracks.rs
id3show/: CHANGELOG.md  Cargo.toml
id3show/src/: ape.rs  build_cli.rs  dsf.rs  flac.rs  main.rs  mp3.rs  mp4.rs
id3tag/: CHANGELOG.md  Cargo.toml  README.md  _build.rs  debug.yaml  id3tag-config.toml  id3tag.toml
id3tag/src/: build.rs  cli.rs  default_values.rs  main.rs  rename_file.rs
id3tag/src/formats/: ape.rs  dsf.rs  flac.rs  images.rs  mod.rs  mp3.rs  mp4.rs  tag_macros.rs  tags.rs
id3tag/src/formats/images/: CHANGELOG.md  covertype.rs  mod.rs  ops.rs  paths.rs  tests.rs
sample_data/: README.md  summary-example.json  summary-schema.json  summary.json
src/: ape.rs  args.rs  cli.rs  default_values.rs  flac.rs  id3tag.yaml  main.rs  mp3.rs  mp4.rs  rename_file.rs  shared.rs
src/formats/: ape.rs  dsf.rs  flac.rs  mod.rs  mp3.rs  mp4.rs  tags.rs
supply-chain/: config.toml
testdata/: CHANGELOG.md  id3tag-config.toml
