[package]
name = "id3tag"
version = "0.10.2"
edition = "2021"
authors = ["Even Solberg <even.solberg@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "A simple application for updating metadata (ID3) information in FLAC, MP3 and MP4 files."
homepage = "https://github.com/evensolberg/id3tag"
repository = "https://github.com/evensolberg/id3tag"
keywords = ["flac", "audio", "parser", "metadata"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ape = "0.4.0"
clap = { version = "3.1.0", features = ["cargo", "color"] }
id3 = "1.0.2"
log = "0.4.14"
log4rs = { version = "1.0.0", features = ["console_appender", "file_appender", "threshold_filter"] }
metaflac = "0.2.5"
mp4ameta = "0.11.0"
rayon = "1.5.1"
serde = { version = "1.0.136", features = ["derive"] }
shellexpand = "2.1.0"
toml = "0.5.8"


[dev-dependencies]
assay = "0.1.0"

[profile.release]
# strip = true
