[workspace]
members = [
    "common",
    "id3cli-gen",
    "id3export",
    "id3show",
    "id3tag",
]
# Ref:https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

[profile.release]
strip = true

# [profile.fast]
# inherits = "dev"
# opt-level = 0
# debug = 0
# strip = "none"
# lto = false
# codegen-units = 256
# incremental = true
# panic = "unwind"

[workspace.dependencies]
ape = "0"
clap = { version = "4.5.60", features = ["cargo"] }
dsf = "0.2.2"
log = "0.4.29"
log4rs = "1.4.0"
id3 = "1.16.4"
metaflac = {path = "../_crates/rust-metaflac", version = "0.2.6"}
mp4ameta = "0.13.0"
assay = "0.1.1"
clap_complete = "4.5.66"
clap_complete_fig = "4.5.2"
clap_mangen = "0.2.31"
csv = "1.4.0"
glob = "0.3.3"
human-duration = "0.1.0"
image = "0.25.9"
infer = "0.19.0"
itertools = "0.14.0"
mp3-metadata = "0.4.0"
rayon = "1.11.0"
serde = "1.0.228"
serde_json = "1.0.149"
shellexpand = "3"
thousands = "0.2.0"
toml = "1.0"
env_logger = "0.11.9"

[workspace.package]
edition = "2021"
authors = ["Even Solberg <even.solberg@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "A collection of command-line tools for working with ID3-style tags in audio files."
