[package]
name = "common"
version = "0.1.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
description = "Shared utility functions and structures for the id3tools"
homepage = "https://github.com/evensolberg/id3tools/common/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
shellexpand = "3"
infer = "0.15.0"

[dev-dependencies]
assay = "0.1.1"
