[package]
name = "common"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
description = "Shared utility functions and structures for the id3tools"
homepage = "https://github.com/evensolberg/id3tools/common/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
shellexpand = { workspace = true }
infer = { workspace = true }
serde = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
assay = { workspace = true }
