[package]
name = "id3export"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
description = "Export ID3 tags to CSV and/or JSON. A file is generated for each directory processed."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ape = { workspace = true }
clap = { workspace = true }
dsf = { workspace = true }
id3 = { workspace = true }
log = { workspace = true }
metaflac = { workspace = true }
mp4ameta = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
csv = { workspace = true }

# Our own package
common = { path = "../common" }
