[package]
name = "id3export"
version = "0.7.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
description = "Export ID3 tags to CSV for analysis."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ape = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
dsf = { workspace = true }
env_logger = { workspace = true }
glob = { workspace = true }
id3 = { workspace = true }
infer = { workspace = true }
log = { workspace = true }
metaflac = { workspace = true }
mp3-metadata = { workspace = true }
mp4ameta = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Our own package
common = { path = "../common" }
