[package]
name = "id3show"
version = "0.2.0"
edition = "2021"
authors = ["Even Solberg <even.solberg@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "A simple application to display metadata (ID3) information in music files."
homepage = "https://github.com/evensolberg/id3tools/id3show/"
repository = "https://github.com/evensolberg/id3tools"
keywords = ["flac", "audio", "parser", "metadata", "display"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.23", features = ["cargo", "color"] }

ape = "0"
id3 = "1.6.0"
metaflac = "0.2.5"
mp4ameta = "0.11.0"
dsf = "0.2.2"

# Our own package
common = { path = "../common" }
log = "0.4.17"
