[package]
name = "id3show"
edition = "2021"
version = "0.2.2"
authors = ["Even Solberg <even.solberg@gmail.com>"]
description = "A simple application to display metadata (ID3) information in music files."
homepage = "https://github.com/evensolberg/id3tools/id3show/"
readme = "README.md"
keywords = ["flac", "audio", "parser", "metadata", "display"]
license = "MIT"
repository = "https://github.com/evensolberg/id3tools"

[dependencies]
ape = "0"
dsf = "0.2.2"
id3 = "1.7.0"
log = { workspace = true }
metaflac = "0.2.5"
mp3-metadata = "0.3.4"
mp4ameta = "0.11.0"
clap = { workspace = true }

[dependencies.common]
path = "../common"
features = []
optional = false
