[package]
name = "id3tag"
version = "0.14.8"
edition = "2021"
authors = ["Even Solberg <even.solberg@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "A simple application for updating metadata (ID3) information in FLAC, MP3 and MP4 files."
homepage = "https://github.com/evensolberg/id3tools/id3tag/"
repository = "https://github.com/evensolberg/id3tools"
keywords = ["flac", "audio", "parser", "metadata"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ape = "0"
clap = { version = "4.1.8", features = ["cargo", "wrap_help"] }
id3 = "1.6.0"
log = "0.4.17"
metaflac = "0.2.5"
mp4ameta = "0.11.0"
rayon = "1.7.0"
serde = { version = "1.0.154", features = ["derive"] }
shellexpand = "3"
toml = "0"
dsf = "0.2.2"

# Our own package
common = { path = "../common" }
image = "0.24.5"
itertools = "0.10.5"
