[package]
name = "id3tag"
version = "0.14.13"
edition = "2021"
authors = ["Even Solberg <even.solberg@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "A simple application for updating metadata (ID3) information in FLAC, MP3 and MP4 files."
homepage = "https://github.com/evensolberg/id3tools/id3tag/"
repository = "https://github.com/evensolberg/id3tools"
keywords = ["flac", "audio", "parser", "metadata"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ape = { workspace = true }
clap = { workspace = true }
dsf = { workspace = true }
id3 = { workspace = true }
image = "0.24.6"
itertools = "0.10.5"
log = { workspace = true }
metaflac = { workspace = true }
mp4ameta = { workspace = true }
rayon = "1.7.0"
serde = { version = "1.0.163", features = ["derive"] }
shellexpand = "3"
toml = "0"

# Our own package
common = { path = "../common" }
human-duration = "0.1.0"
thousands = "0.2.0"
