[package]
name = "id3tag"
version = "0.14.15"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
description = "A simple application for updating metadata (ID3) information in FLAC, MP3 and MP4 files."
homepage = "https://github.com/evensolberg/id3tools/id3tag/"
repository = "https://github.com/evensolberg/id3tools"
keywords = ["flac", "audio", "parser", "metadata"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ape = { workspace = true }
clap = { workspace = true }
dsf = { workspace = true }
id3 = { workspace = true }
image = { workspace = true, features = ["jpeg", "png"] }
itertools = { workspace = true }
log = { workspace = true }
metaflac = { workspace = true }
mp4ameta = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
shellexpand = { workspace = true }
toml = { workspace = true }
human-duration = { workspace = true }
thousands = { workspace = true }

# Our own package
common = { path = "../common" }
